@@ -2,6 +2,9 @@
 
 	* docs/programmers-guide:  Update documentation.
 
+	* pykickstart/base.py (DeprecatedCommand):  This should be an abstract
+	class.
+
 2007-03-30  Chris Lumens  <clumens@redhat.com>
 
 	* pykickstart/parser.py (KickstartParser.readKickstart):  Use
